--- a/src/components/css/form.css
+++ b/src/components/css/form.css
@@ -29,7 +29,7 @@ button{
     margin: auto;
     height: 3rem;
     width: 90%;
-
+    padding: 0 2rem;
 }
 
 .form form button{
@@ -38,4 +38,5 @@ button{
     color: #ffffff;
     cursor: pointer;
     outline: 0;
+    /* padding: 0; */
 }
